--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
-          curl -X POST https://api.render.com/v1/services/{secrets.WEB_SERVICE_ID}/deploys \
+          curl -X POST https://api.render.com/v1/services/${{secrets.WEB_SERVICE_ID}}/deploys \
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Content-Type: application/json" \
           -d '{}'
