--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -20,6 +20,7 @@ FROM node:20-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
+ENV PORT=3000
 
 # Copy built assets
 COPY --from=builder /app/.next/standalone ./
@@ -28,4 +29,4 @@ COPY --from=builder /app/public ./public
 
 EXPOSE 3000
 
-CMD ["node", "server.js"]
+CMD ["sh", "-c", "node server.js"]
