--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:20-alpine AS builder
 WORKDIR /app
+
+
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
 COPY package*.json ./
 RUN npm ci
 COPY . .
@@ -8,8 +13,6 @@ RUN npm run build
 # Production image
 FROM node:20-alpine AS runner
 WORKDIR /app
-
-
 
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
