--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 
 
-ARG NEXT_PUBLIC_API_URL=https://discordbot-api-latest.onrender.com
+ARG NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
 COPY package*.json ./
