Add railwayu CI/CD

--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -33,6 +33,14 @@ jobs:
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Content-Type: application/json" \
           -d '{}'
+      - name : Trigger Railway deploy - Bot
+        env:
+          RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
+        run: |
+          curl -X POST https://backboard.railway.com/graphql/v2 \
+          -H "Authorization: Bearer $RAILWAY_API_KEY" \
+          -H "Content-Type: application/json" \
+          -d '{"query":"mutation deploymentRedeploy($id: String!) {\n  deploymentRedeploy(id: $id) {\n    id\n    status\n  }\n}","variables":{"id":"${{ secrets.BOT_SERVICE_ID_RAILWAY}}"}}'
 
       # ============ API ============
       - name: Build API image
@@ -49,6 +57,14 @@ jobs:
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Content-Type: application/json" \
           -d '{}'
+      - name : Trigger Railway deploy - API
+        env:
+          RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
+        run: |
+          curl -X POST https://backboard.railway.com/graphql/v2 \
+          -H "Authorization: Bearer $RAILWAY_API_KEY" \
+          -H "Content-Type: application/json" \
+          -d '{"query":"mutation deploymentRedeploy($id: String!) {\n  deploymentRedeploy(id: $id) {\n    id\n    status\n  }\n}","variables":{"id":"${{ secrets.API_SERVICE_ID_RAILWAY}}"}}'
 
       # ============ DASHBOARD ============
       - name: Build Dashboard image
@@ -65,3 +81,11 @@ jobs:
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Content-Type: application/json" \
           -d '{}'
+      - name : Trigger Railway deploy - Dashboard
+        env:
+          RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
+        run: |
+          curl -X POST https://backboard.railway.com/graphql/v2 \
+          -H "Authorization: Bearer $RAILWAY_API_KEY" \
+          -H "Content-Type: application/json" \
+          -d '{"query":"mutation deploymentRedeploy($id: String!) {\n  deploymentRedeploy(id: $id) {\n    id\n    status\n  }\n}","variables":{"id":"${{ secrets.WEB_SERVICE_ID_RAILWAY}}"}}'
